--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -32,22 +32,39 @@
     <div class="container">
 
       <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
+          {{ form.hidden_tag() }}
+        <h2 class="form-signin-heading">Электронный журнал</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
+        <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
+
+        <!--<div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </div> -->
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
       </form>
 
     </div> <!-- /container -->
 
 
+
+    <div class="container">
+        <form class="form-signin" method="post">
+             {{ form.hidden_tag() }}
+            <h2 class="form-signin-heading ">Тестовая форма</h2>
+                 {{ form.name.label }} {{ form.name(id="inputEmail") }}
+            <div class="form-actions">
+                    <button name="action_save" type="submit" class=" btn-lg btn btn-primary btn-block">Тестовая кнопка</button>
+            </div>
+        </form>
+    </div>
+
+
+
+    <!------------------------------------------------->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
