--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="post">
         <h2 class="form-signin-heading">Электронный журнал</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input name=username type=text id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
