--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,19 +7,19 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/static/img/favicon.ico">
+    <link rel="icon" href="static/img/favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Электронный журнал посещений</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/signin.css" rel="stylesheet">
+    <link href="static/css/signin.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="/static/js/ie-emulation-modes-warning.js"></script>
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,31 +27,28 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-<body>
+
+ <body>
 
     <div class="container">
 
-      <form class="form-signin" method="post">
+      <form name="loginform" method="post" class="form-signin">
         <h2 class="form-signin-heading">Электронный журнал</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input name=username type=text id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
+        <label for="inputLogin" class="sr-only">Логин</label>
+        <input name="login" type="login" id="inputLogin" class="form-control" placeholder="Логин" required autofocus>
+        <label for="inputPassword" class="sr-only">Пароль</label>
         <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
-
-        <!--<div class="checkbox">
+        <div class="checkbox">
           <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me"> Запомнить меня
           </label>
-        </div> -->
+        </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
       </form>
 
     </div> <!-- /container -->
 
 
-
-
-    <!------------------------------------------------->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
