--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,82 +1,41 @@
 <!DOCTYPE html>
-<head>
- <link href="static/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div class="row">
- <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
- <div class="well profile">
- <div class="col-sm-12">
- <div class="col-xs-12 col-sm-8">
- <h2>Сергей Иванов</h2>
- <p><strong>Обо мне: </strong> Веб-дизайнер. </p>
- <p><strong>Хобби: </strong> Книги, природа, активный отдых, сайтостроение, дизайн, верстка </p>
- <p><strong>Знания: </strong>
- <span class="tags">HTML5</span>
- <span class="tags">CSS3</span>
- <span class="tags">jQuery</span>
- <span class="tags">Bootstrap</span>
- </p>
- </div>
- <div class="col-xs-12 col-sm-4 text-center">
- <figure>
- <img src="/user-profile.jpg" alt="user" class="img-circle img-responsive">
- <figcaption class="ratings">
- <p>Рейтинг
- <a href="#">
- <span class="fa fa-star"></span>
- </a>
- <a href="#">
- <span class="fa fa-star"></span>
- </a>
- <a href="#">
- <span class="fa fa-star"></span>
- </a>
- <a href="#">
- <span class="fa fa-star"></span>
- </a>
- <a href="#">
- <span class="fa fa-star-o"></span>
- </a>
- </p>
- </figcaption>
- </figure>
- </div>
- </div>
- <div class="col-xs-12 divider text-center">
- <div class="col-xs-12 col-sm-4 emphasis">
- <h2><strong> 32,4K </strong></h2>
- <p><small>Подписчиков</small></p>
- <button class="btn btn-success btn-block"><span class="fa fa-plus-circle"></span> Подписатся</button>
- </div>
- <div class="col-xs-12 col-sm-4 emphasis">
- <h2><strong>723</strong></h2>
- <p><small>Записей</small></p>
- <button class="btn btn-info btn-block"><span class="fa fa-user"></span> Профиль</button>
- </div>
- <div class="col-xs-12 col-sm-4 emphasis">
- <h2><strong>74</strong></h2>
- <p><small>Работы</small></p>
- <div class="btn-group dropup btn-block">
- <button type="button" class="btn btn-primary"><span class="fa fa-gear"></span> Опции</button>
- <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
- <span class="caret"></span>
- <span class="sr-only">Toggle Dropdown</span>
- </button>
- <ul class="dropdown-menu text-left" role="menu">
- <li><a href="#"><span class="fa fa-envelope pull-right"></span> Отправить email </a></li>
- <li><a href="#"><span class="fa fa-list pull-right"></span> Редактировать список</a></li>
- <li class="divider"></li>
- <li><a href="#"><span class="fa fa-warning pull-right"></span>Сообщить о спаме</a></li>
- <li class="divider"></li>
- <li><a href="#" class="btn disabled" role="button"> Отписатся </a></li>
- </ul>
- </div>
- </div>
- </div>
- </div>
- </div>
- </div>
-</div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="static/img/favicon.ico">
 
-</body>
+    <title>Электронный журнал посещений</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/signin.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+ <body>
+
+
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Главная</a></li>
+  <li><a href="#">Профиль</a></li>
+  <li><a href="#">Сообщение</a></li>
+</ul>
+ </body>
+ </html>
+
