--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -30,21 +30,12 @@
 
  <body>
 
-    <div class="container">
 
-      <form name="loginform" method="post" class="form-signin">
-        <h2 class="form-signin-heading">Электронный журнал</h2>
-        <label for="inputLogin" class="sr-only">Логин</label>
-        <input name="login" type="login" id="inputLogin" class="form-control" placeholder="Логин" required autofocus>
-        <label for="inputPassword" class="sr-only">Пароль</label>
-        <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-      </form>
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Главная</a></li>
+  <li><a href="#">Профиль</a></li>
+  <li><a href="#">Сообщение</a></li>
+</ul>
+ </body>
+ </html>
 
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
