--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -76,10 +76,10 @@
             <ul class="list-group">
                 <li class="list-group-item text-muted">Статистика <i class="fa fa-dashboard fa-1x"></i> </li>
 
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Shares</strong></span> 125</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Likes</strong></span> 13</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Posts</strong></span> 37</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Followers</strong></span> 78</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Количество опозданий</strong></span> 125</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Опозданий за месяц</strong></span> 13</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Количество пропусков</strong></span> 37</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Пропусков за месяц</strong></span> 78</li>
             </ul>
             <!--<div class="panel panel-default">
                 <div class="panel-heading">Social Media</div>
