Добавление графика настраницу профиля

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -37,7 +37,7 @@
                     type: 'areaspline'
                 },
                 title: {
-                    text: 'Average fruit consumption during one week'
+                    text: 'Количество отработанных часов в неделю'
                 },
                 legend: {
                     layout: 'vertical',
@@ -72,7 +72,7 @@
                 },
                 tooltip: {
                     shared: true,
-                    valueSuffix: ' units'
+                    valueSuffix: ' ч'
                 },
                 credits: {
                     enabled: false
@@ -82,8 +82,9 @@
                         fillOpacity: 0.5
                     }
                 },
+
                 series: [{
-                    name: 'Шерлок Холмс',
+                    name: 'Отработано',
                     data: [3, 4, 3, 5, 4, 0, 0]
                 }]
             });
