--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -101,13 +101,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Электронный журнал</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#">Моя страница</a></li>
+
+            <li><a href="#about">Статистика</a></li>
+            <li><a href="#staff">Сотрудники</a></li>
+            <li><a href="/log">Выход</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -117,9 +119,11 @@
 <div class="container target">
     <div class="row">
        <div class="col-sm-10">
-             <h1 class="">Starfox221</h1>
+             <h1 class="">Sholmes</h1>
 
-          <button type="button" class="btn btn-success">Book me!</button>  <button type="button" class="btn btn-info">Send me a message</button>
+          <button type="button" class="btn btn-success">Зарегистрироваться</button>
+
+          <!--<button type="button" class="btn btn-info">Send me a message</button>-->
 <br>
         </div>
       <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image" class="img-circle img-responsive" src="http://www.rlsandbox.com/img/profile.jpg"></a>
@@ -184,7 +188,7 @@
 
 	<script src="/plugins/bootstrap-pager.js"></script>
 </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
     <script src="static/js/bootstrap.min.js"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
