--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -155,14 +155,17 @@
             </ul>
 
             <ul class="list-group">
-                <li class="list-group-item">
-                    <span class="badge">14</span>
-                    <strong class="">Cras justo odio</strong>
-                </li>
+
                 <li class="list-group-item text-muted">Статистика <i class="fa fa-dashboard fa-1x"></i> </li>
 
                 <li class="list-group-item text-right">
                     <span class="pull-left"><strong class="">Количество опозданий</strong></span>1</li>
+
+                <li class="list-group-item">
+                    <span class="badge">14</span>
+                    <strong class="">Test</strong>
+                </li>
+
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Опозданий за месяц</strong></span> 13</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Количество пропусков</strong></span> 37</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Пропусков за месяц</strong></span> 78</li>
